# maestro

./: .gitignore  Cargo.toml  Maestro.toml  README.md  TODO.md  build_doc.sh
cli/: Cargo.toml  Dockerfile
cli/src/: build.rs  bundle.rs  cache.rs  init.rs  kill.rs  main.rs  toolchain.rs
cli/templates/: .gitignore  Cargo.toml  Maestro.toml  main.rs
crates/dsl/: Cargo.toml
crates/dsl/src/: macros.rs
crates/finalflow/: Cargo.toml
crates/finalflow/src/: lib.rs  macros.rs  prelude.rs  session.rs  types.rs  workflow.rs
crates/finalflow/src/types/: config.rs  container.rs  mod.rs  workflow.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/lib/src/executors/: local.rs  mod.rs  slurm.rs
crates/macros/: Cargo.toml
crates/macros/src/: checker.rs  container.rs  lib.rs  macros.rs
crates/maestro/: Cargo.toml
crates/maestro/src/: executors.rs  lib.rs  macros.rs  session.rs  workflow.rs
crates/maestro/src/executors/: local.rs  mod.rs  slurm.rs
crates/proc/: Cargo.toml
crates/proc-macros/src/: container.rs
crates/proc/src/: checker.rs  lib.rs
crates/shellcheck/: Cargo.toml
crates/shellcheck/src/: checker.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: macros.rs  types.rs
lib/: Cargo.toml  dependencies.toml  dependencies.txt  procinfo.toml
lib/examples/: workflow.rs
lib/examples/scripts/: test.sh
lib/src/: config.rs  lib.rs  prelude.rs  process.rs  session.rs
lib/src/executors/: generic.rs  local.rs  mod.rs  slurm.rs
proc/: Cargo.toml
proc/src/: checker.rs  dep_analysis.rs  lib.rs
py/: .gitignore  Cargo.toml  Maestro.toml  maestro.pyi  pyproject.toml  test.py
py/src/: lib.rs
py/test/: test.py
session/: Cargo.toml
session/src/: lib.rs
tester/: Cargo.toml
tester/data/: b.txt  seq1.fasta  seq2.fasta
tester/scripts/: test.sh
tester/src/: main.rs
