[package]
name = "maestro"
version = "0.2.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
maestro-macros = { path = "../proc", features = ["check_scripts"] }
dagger = { version = "0.1.6", git = "https://github.com/seb-hyland/dagger.git" }
serde = { version = "1.0.225", features = ["derive"], default-features = false }
toml = { version = "0.9.7", features = ["parse", "serde"], default-features = false }
ctor = "0.5.0"
