[package]
name = "maestro"
version = "0.2.10"
edition = "2024"

[dependencies]
maestro_macros = { workspace = true, features = ["check_scripts"] }
session_gen = { workspace = true }
dagger = { version = "0.1.9", git = "https://github.com/seb-hyland/dagger.git" }
serde = { version = "1.0.225", features = ["std", "derive"], default-features = false }
toml = { version = "0.9.7", features = ["parse", "serde"], default-features = false }
inventory = "0.3.21"
