[package]
name = "maestro_macros"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
fxhash = "0.2.1"
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
quote = "1.0.40"
rand = "0.9.2"
serde = { version = "1.0.226", features = ["derive"] }
syn = "2.0.104"
toml = "0.9.7"

[features]
default = []
check_scripts = []
