[package]
name = "maestro_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "maestro_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.25.0"
maestro = { path = "../lib" }
pyo3-stub-gen = "0.13.1"
