[package]
name = "finalflow-macros"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/macros.rs"
proc-macro = true

[dependencies]
oci-distribution = "0.11.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
