[package]
name = "maestro-macros"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
# oci-distribution = "0.11.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.2"
# regex = "1.11.1"
syn = "2.0.104"
# tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
